added last doxygen parts

--- a/Watter0-0.cydsn/ImplementedSource/html/_power_mode_8h.html
+++ b/Watter0-0.cydsn/ImplementedSource/html/_power_mode_8h.html
@@ -69,6 +69,9 @@ $(function() {
 <div class="title">PowerMode.h File Reference</div>  </div>
 </div><!--header-->
 <div class="contents">
+
+<p>This header includes the functions for adding a FreeRTOS task which can make the system go into deepsleep.  
+<a href="#details">More...</a></p>
 <div class="textblock"><code>#include &quot;project.h&quot;</code><br />
 </div>
 <p><a href="_power_mode_8h_source.html">Go to the source code of this file.</a></p>
@@ -83,10 +86,10 @@ Functions</h2></td></tr>
 <tr class="separator:af4db346ba21e7e6eadfbedcf66f2828a"><td class="memSeparator" colspan="2">&#160;</td></tr>
 </table>
 <a name="details" id="details"></a><h2 class="groupheader">Detailed Description</h2>
-<div class="textblock"><dl class="section author"><dt>Author</dt><dd>your name (<a href="#" onclick="location.href='mai'+'lto:'+'you'+'@d'+'oma'+'in'+'.co'+'m'; return false;">you@d<span style="display: none;">.nosp@m.</span>omai<span style="display: none;">.nosp@m.</span>n.com</a>) </dd></dl>
+<div class="textblock"><p>This header includes the functions for adding a FreeRTOS task which can make the system go into deepsleep. </p>
+<dl class="section author"><dt>Author</dt><dd>Nicklas Lind </dd></dl>
 <dl class="section version"><dt>Version</dt><dd>0.1 </dd></dl>
-<dl class="section date"><dt>Date</dt><dd>2020-12-13</dd></dl>
-<dl class="section copyright"><dt>Copyright</dt><dd>Copyright (c) 2020 </dd></dl>
+<dl class="section date"><dt>Date</dt><dd>2020-12-13 </dd></dl>
 </div><h2 class="groupheader">Function Documentation</h2>
 <a id="af4db346ba21e7e6eadfbedcf66f2828a"></a>
 <h2 class="memtitle"><span class="permalink"><a href="#af4db346ba21e7e6eadfbedcf66f2828a">&#9670;&nbsp;</a></span>DeepSleepCallback()</h2>
