--- a/Watter0-0.cydsn/ImplementedSource/html/sampler_8h.html
+++ b/Watter0-0.cydsn/ImplementedSource/html/sampler_8h.html
@@ -72,6 +72,9 @@ $(function() {
 <div class="title">sampler.h File Reference</div>  </div>
 </div><!--header-->
 <div class="contents">
+
+<p>This header was used to simulate samples during early development. The header is mostly obsolete now.  
+<a href="#details">More...</a></p>
 <div class="textblock"><code>#include &quot;project.h&quot;</code><br />
 <code>#include &quot;semphr.h&quot;</code><br />
 </div>
@@ -104,10 +107,10 @@ Variables</h2></td></tr>
 <tr class="separator:aef05c3d48d3841ed7fec7766d782c8ef"><td class="memSeparator" colspan="2">&#160;</td></tr>
 </table>
 <a name="details" id="details"></a><h2 class="groupheader">Detailed Description</h2>
-<div class="textblock"><dl class="section author"><dt>Author</dt><dd>your name (<a href="#" onclick="location.href='mai'+'lto:'+'you'+'@d'+'oma'+'in'+'.co'+'m'; return false;">you@d<span style="display: none;">.nosp@m.</span>omai<span style="display: none;">.nosp@m.</span>n.com</a>) </dd></dl>
+<div class="textblock"><p>This header was used to simulate samples during early development. The header is mostly obsolete now. </p>
+<dl class="section author"><dt>Author</dt><dd>Nicklas Lind </dd></dl>
 <dl class="section version"><dt>Version</dt><dd>0.1 </dd></dl>
-<dl class="section date"><dt>Date</dt><dd>2020-12-13</dd></dl>
-<dl class="section copyright"><dt>Copyright</dt><dd>Copyright (c) 2020 </dd></dl>
+<dl class="section date"><dt>Date</dt><dd>2020-12-13 </dd></dl>
 </div><h2 class="groupheader">Function Documentation</h2>
 <a id="aad40839aab143199b15bf8b6c74ce43c"></a>
 <h2 class="memtitle"><span class="permalink"><a href="#aad40839aab143199b15bf8b6c74ce43c">&#9670;&nbsp;</a></span>task_sampler()</h2>
