--- a/Watter0-0.cydsn/ImplementedSource/html/wat_utility_8h.html
+++ b/Watter0-0.cydsn/ImplementedSource/html/wat_utility_8h.html
@@ -70,6 +70,9 @@ $(function() {
 <div class="title">watUtility.h File Reference</div>  </div>
 </div><!--header-->
 <div class="contents">
+
+<p>This header includes small helper functions for different parts of the system.  
+<a href="#details">More...</a></p>
 <div class="textblock"><code>#include &quot;project.h&quot;</code><br />
 </div>
 <p><a href="wat_utility_8h_source.html">Go to the source code of this file.</a></p>
@@ -102,10 +105,10 @@ Functions</h2></td></tr>
 <tr class="separator:a98ad3da23b815a429ac865a3a6881d63"><td class="memSeparator" colspan="2">&#160;</td></tr>
 </table>
 <a name="details" id="details"></a><h2 class="groupheader">Detailed Description</h2>
-<div class="textblock"><dl class="section author"><dt>Author</dt><dd>your name (<a href="#" onclick="location.href='mai'+'lto:'+'you'+'@d'+'oma'+'in'+'.co'+'m'; return false;">you@d<span style="display: none;">.nosp@m.</span>omai<span style="display: none;">.nosp@m.</span>n.com</a>) </dd></dl>
+<div class="textblock"><p>This header includes small helper functions for different parts of the system. </p>
+<dl class="section author"><dt>Author</dt><dd>Nicklas Lind </dd></dl>
 <dl class="section version"><dt>Version</dt><dd>0.1 </dd></dl>
-<dl class="section date"><dt>Date</dt><dd>2020-12-13</dd></dl>
-<dl class="section copyright"><dt>Copyright</dt><dd>Copyright (c) 2020 </dd></dl>
+<dl class="section date"><dt>Date</dt><dd>2020-12-13 </dd></dl>
 </div><h2 class="groupheader">Function Documentation</h2>
 <a id="a640d20dd91267bb8dd02ab89c6f6dd01"></a>
 <h2 class="memtitle"><span class="permalink"><a href="#a640d20dd91267bb8dd02ab89c6f6dd01">&#9670;&nbsp;</a></span>addDataToArray()</h2>
